[package]
name = "serenity-build-test"
version = "0.1.0"
authors = ["Jamie McClymont <jamie@kwiius.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serenity = { version = "0.7.2", default-features = false, features = ["builder", "client", "gateway", "http", "model", "utils", "rustls_backend", "voice"] }
